--- a/prj.conf
+++ b/prj.conf
@@ -3,3 +3,17 @@ CONFIG_DISPLAY=y
 CONFIG_ST7735R=y
 CONFIG_CHARACTER_FRAMEBUFFER=y
 CONFIG_LOG=y
+
+CONFIG_CONSOLE=y
+
+CONFIG_INIT_STACKS=y
+CONFIG_MAIN_STACK_SIZE=2048
+CONFIG_HEAP_MEM_POOL_SIZE=16384
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+
+CONFIG_LVGL=y
+CONFIG_LV_FONT_MONTSERRAT_32=y
+
+CONFIG_LV_Z_MEM_POOL_SIZE=49152
+CONFIG_LV_COLOR_DEPTH_16=y
+CONFIG_LV_USE_LABEL=y
